src/short_distance_track_process/src/results_merge/src/err
In file included from main.cpp:1:0:
overlapSum.cpp: In function ‘int getNo(std::vector<TRACK>&, std::vector<TRACK>&, int*, int*)’:
overlapSum.cpp:25:31: error: ‘fabs’ was not declared in this scope
         if(fabs(b[i].t- a[0].t)< 0.0001)
                               ^
overlapSum.cpp:32:41: error: ‘fabs’ was not declared in this scope
         if(fabs(a[i].t- b[b.size()- 1].t)< 0.0001)
                                         ^
overlapSum.cpp: In function ‘int overlapSum(std::vector<TRACK>&, std::vector<TRACK>&)’:
overlapSum.cpp:73:33: error: ‘num’ was not declared in this scope
                     coe1= (1.0- num/(2.0* smWindow));
                                 ^
overlapSum.cpp:78:26: error: ‘num’ was not declared in this scope
                 else if((num> smWindow)&&(num<= opNo- smWindow))
                          ^
overlapSum.cpp:78:49: error: ‘opNo’ was not declared in this scope
                 else if((num> smWindow)&&(num<= opNo- smWindow))
                                                 ^
main.cpp:4:1: error: a function-definition is not allowed here before ‘{’ token
 {
 ^
main.cpp:18:1: error: expected ‘}’ at end of input
 }
 ^
